DFHack future

  Internals:
   EventManager:
    EQUIPMENT_CHANGE now triggers for new units
    new events:
     ON_REPORT
     UNIT_ATTACK
     UNLOAD
     INTERACTION
   sorted CMakeLists for plugins and devel plugins
  New scripts:
   add-syndrome.lua
    add a syndrome to a unit. many configurable options
   attack-trigger.lua
    run commands when a unit attacks another with weapons of a given type or weapons of a given material
   blooddel.lua
    makes it so civs don't bring barrels full of blood ichor or goo
   feeding-timers.lua
    reset the feeding timers of all units
   force.lua
    forces events: caravan, migrants, diplomat, megabeast, curiousbeast, mischievousbeast, flier, siege, nightcreature
   forumdwarves.lua
    helps copies df viewscreens to a file
   fullheal.lua
    fully heals a unit
   growthbug.lua
    fixes the growth bug
   hackWish.lua
    creates items out of any material
   itemsyndrome.lua
    adds and removes syndromes to units when they equip and unequip items
   item-trigger.lua
    triggers commands based on equipping, unequipping, and wounding units with items
   moddableGods.lua
    makes raw moddable gods possible
   printArgs.lua
   projectileExpansion.lua
    adds extra functionality to projectiles
   reaction-trigger.lua
    trigger commands when custom reactions complete
    replaces autoSyndrome
   repeat.lua
    repeatedly calls a script or a plugin
   repeatUtil.lua
    makes it easier to make things repeat indefinitely
   removewear.lua
    removes wear from all items in the fort
   shapechange.lua
    shapeshifts a unit, possibly permanently
   ShowUnitSyndromes.rb
    shows syndromes affecting units and other relevant info
   skillChange.lua
    changes the skill of a unit
   skillroll.lua
    invokes dfhack commands based on random chances
   Spawnunit.lua
    creates units!
   syndromeUtil.lua
    makes it easier to deal with unit syndromes
   syndrome-trigger.lua
    trigger commands when syndromes happen